--- a/src/components/channels/channels-container/channels-container.module.scss
+++ b/src/components/channels/channels-container/channels-container.module.scss
@@ -1,5 +1,36 @@
+.channels__wrapper {
+    overflow-y: auto;
+    position: relative;
+    width: 100.9%;
+    height: 692px;
+    max-height: 696px;
+    margin-top: -2px;
+    margin-bottom: 72px;
+    margin-left: 4px;
+    border-radius: 10px;
+}
+
 .channels {
-  border-radius: 8px;
-  margin-bottom: 72px;
-  margin-left: 5px;
+    width: 99.4%;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #F2F2F2;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #BDBDBD;
+    border: 2px solid #F2F2F2;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    background-color: #BDBDBD;
+}
+
+::-webkit-scrollbar:hover {
+    width: 8px;
+    background-color: #BDBDBD;
 }
